# HomeCloud

./: .gitignore  Cargo.toml  build.rs  build.sh  example.toml  readme.md
init.d/: homecloud
src/: main.rs
