[package]
name = "homecloud"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap="1.0"
toml = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
# clap = {version = "4.1.4" ,features=["derive"]}

# [build-dependencies]
# bindgen = "0.53.1"
